[gd_scene load_steps=43 format=3 uid="uid://cogpnhk85jkf6"]

[ext_resource type="Script" path="res://places/arena.gd" id="1_8rm4t"]
[ext_resource type="Texture2D" uid="uid://034axy8v5eai" path="res://icons/attack_normal.png" id="2_1ujp8"]
[ext_resource type="Texture2D" uid="uid://cxu8ljdtu7qiq" path="res://places/forest.png" id="2_t58yp"]
[ext_resource type="PackedScene" uid="uid://cy5rtmgerpllr" path="res://entities/player/player.tscn" id="2_v6cbg"]
[ext_resource type="PackedScene" uid="uid://di423s5vi7817" path="res://entities/player/ai.tscn" id="3_fx06h"]
[ext_resource type="Texture2D" uid="uid://c7fak7a4keib4" path="res://places/forest_forground.png" id="3_kr5m4"]
[ext_resource type="Texture2D" uid="uid://djtplc3rm4hvs" path="res://icons/attack_clicked.png" id="3_vfigt"]
[ext_resource type="Texture2D" uid="uid://cd1hldj1x304v" path="res://icons/attack_hover.png" id="4_ya15i"]
[ext_resource type="Texture2D" uid="uid://cyl1713e1ee1" path="res://icons/attack_disabled.png" id="5_06r8f"]
[ext_resource type="Texture2D" uid="uid://bmwba4p55ajbo" path="res://icons/quick_attack_normal.png" id="6_wm05w"]
[ext_resource type="Texture2D" uid="uid://d2jadakeeqsb0" path="res://icons/quick_attack_clicked.png" id="7_xxsjq"]
[ext_resource type="Texture2D" uid="uid://upqq64q2h04i" path="res://icons/quick_attack_hover.png" id="8_jwogv"]
[ext_resource type="Texture2D" uid="uid://b4tn0iqvk3hjo" path="res://icons/quick_attack_disabled.png" id="9_a172h"]
[ext_resource type="Texture2D" uid="uid://ql8aiv86b4n5" path="res://icons/swap_normal.png" id="10_lrewk"]
[ext_resource type="Texture2D" uid="uid://b4hnob3v6i4sr" path="res://icons/swap_clicked.png" id="11_s7lb6"]
[ext_resource type="Texture2D" uid="uid://cv82uoo0c5fxw" path="res://icons/swap_hover.png" id="12_oa4bg"]
[ext_resource type="Texture2D" uid="uid://durqf1mqror2q" path="res://icons/swap_disabled.png" id="13_np18q"]
[ext_resource type="Texture2D" uid="uid://cmiyin6803vws" path="res://icons/heal_normal.png" id="14_esqu3"]
[ext_resource type="Texture2D" uid="uid://b1px5lbhrj5p5" path="res://icons/heal_click.png" id="15_mixbv"]
[ext_resource type="Texture2D" uid="uid://babo2r4iwkt4h" path="res://icons/heal_hover.png" id="16_uj2jk"]
[ext_resource type="Texture2D" uid="uid://xxi15o8ne6tx" path="res://icons/heal_disabled.png" id="17_7w1vp"]
[ext_resource type="Texture2D" uid="uid://cw401vbip7co" path="res://icons/mana_normal.png" id="18_72pt2"]
[ext_resource type="Texture2D" uid="uid://nqsh4iyr1ovi" path="res://icons/mana_clicked.png" id="19_a2qqg"]
[ext_resource type="Texture2D" uid="uid://dae1dxtdaa4rl" path="res://icons/mana_hovered.png" id="20_knv8d"]
[ext_resource type="Texture2D" uid="uid://cfvdouic8n2x0" path="res://icons/mana_disbabled.png" id="21_07tv2"]
[ext_resource type="Texture2D" uid="uid://c7xk8fkiu4jun" path="res://icons/move_normal.png" id="22_ui451"]
[ext_resource type="Texture2D" uid="uid://b1s5nsm6tluvy" path="res://icons/move_clicked.png" id="23_4mirg"]
[ext_resource type="Texture2D" uid="uid://b0asc5vh06gid" path="res://icons/move_hovered.png" id="24_fxvus"]
[ext_resource type="Texture2D" uid="uid://b8fgjoaheyhym" path="res://icons/move_disabled.png" id="25_fj20d"]
[ext_resource type="Texture2D" uid="uid://bur5lp6osghn8" path="res://icons/jump_normal.png" id="26_ni7f6"]
[ext_resource type="Texture2D" uid="uid://gojx0c1hqy30" path="res://icons/jump_clicked.png" id="27_8ydxo"]
[ext_resource type="Texture2D" uid="uid://x5depd26g1df" path="res://icons/rest_normal.png" id="27_wma2k"]
[ext_resource type="Texture2D" uid="uid://5csm8sw24g27" path="res://icons/rest_clicked.png" id="28_6dfo5"]
[ext_resource type="Texture2D" uid="uid://chcen6xutka52" path="res://icons/jump_hover.png" id="28_xujgh"]
[ext_resource type="Texture2D" uid="uid://dcpg33vfcnvol" path="res://icons/jump_disbaled.png" id="29_byesm"]
[ext_resource type="Texture2D" uid="uid://b8og1v6cvvv1y" path="res://icons/rest_hovered.png" id="29_yywmx"]
[ext_resource type="Texture2D" uid="uid://c8a700wmfefjm" path="res://icons/rest_disabled.png" id="30_r0pc0"]
[ext_resource type="Texture2D" uid="uid://tuh6qhxrms6r" path="res://icons/run_normal.png" id="31_clcne"]
[ext_resource type="Texture2D" uid="uid://co31bc3oi7sms" path="res://icons/run_clicked.png" id="32_wcpfn"]
[ext_resource type="Texture2D" uid="uid://7p3ndd7bektq" path="res://icons/run_hover.png" id="33_ftq12"]
[ext_resource type="Texture2D" uid="uid://cvla5r8t887sp" path="res://icons/run_disabled.png" id="34_clk74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thkbi"]
bg_color = Color(0.129412, 0.0862745, 0.180392, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.164706, 0.152941, 0.34902, 1)

[node name="arena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8rm4t")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t58yp")

[node name="forground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kr5m4")

[node name="ui" type="Panel" parent="."]
custom_minimum_size = Vector2i(0, 275)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -275.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_thkbi")

[node name="vbox" type="VBoxContainer" parent="ui"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -130.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbox" type="HBoxContainer" parent="ui/vbox"]
offset_right = 1280.0
offset_bottom = 260.0
size_flags_vertical = 4

[node name="MarginContainer3" type="MarginContainer" parent="ui/vbox/hbox"]
offset_right = 5.0
offset_bottom = 260.0
theme_override_constants/margin_left = 5

[node name="player_stats" type="VBoxContainer" parent="ui/vbox/hbox"]
unique_name_in_owner = true
offset_left = 9.0
offset_right = 209.0
offset_bottom = 260.0

[node name="name" type="Label" parent="ui/vbox/hbox/player_stats"]
custom_minimum_size = Vector2i(200, 0)
offset_right = 200.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="health" type="Label" parent="ui/vbox/hbox/player_stats"]
offset_top = 27.0
offset_right = 200.0
offset_bottom = 53.0
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="health_value" type="ProgressBar" parent="ui/vbox/hbox/player_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 57.0
offset_right = 200.0
offset_bottom = 82.0
size_flags_vertical = 1
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/player_stats/health_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stamina" type="Label" parent="ui/vbox/hbox/player_stats"]
offset_top = 86.0
offset_right = 200.0
offset_bottom = 112.0
text = "Stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stamina_value" type="ProgressBar" parent="ui/vbox/hbox/player_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 116.0
offset_right = 200.0
offset_bottom = 141.0
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/player_stats/stamina_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mana" type="Label" parent="ui/vbox/hbox/player_stats"]
offset_top = 145.0
offset_right = 200.0
offset_bottom = 171.0
text = "Mana"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mana_value" type="ProgressBar" parent="ui/vbox/hbox/player_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 175.0
offset_right = 200.0
offset_bottom = 200.0
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/player_stats/mana_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ui/vbox/hbox"]
offset_left = 213.0
offset_right = 233.0
offset_bottom = 260.0
theme_override_constants/margin_left = 20

[node name="actions" type="GridContainer" parent="ui/vbox/hbox"]
unique_name_in_owner = true
offset_left = 237.0
offset_right = 893.0
offset_bottom = 260.0
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="attack" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("2_1ujp8")
texture_pressed = ExtResource("3_vfigt")
texture_hover = ExtResource("4_ya15i")
texture_disabled = ExtResource("5_06r8f")

[node name="quick_attack" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 132.0
offset_right = 260.0
offset_bottom = 128.0
texture_normal = ExtResource("6_wm05w")
texture_pressed = ExtResource("7_xxsjq")
texture_hover = ExtResource("8_jwogv")
texture_disabled = ExtResource("9_a172h")

[node name="swap" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 264.0
offset_right = 392.0
offset_bottom = 128.0
texture_normal = ExtResource("10_lrewk")
texture_pressed = ExtResource("11_s7lb6")
texture_hover = ExtResource("12_oa4bg")
texture_disabled = ExtResource("13_np18q")

[node name="heal" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 396.0
offset_right = 524.0
offset_bottom = 128.0
texture_normal = ExtResource("14_esqu3")
texture_pressed = ExtResource("15_mixbv")
texture_hover = ExtResource("16_uj2jk")
texture_disabled = ExtResource("17_7w1vp")

[node name="power_up" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 528.0
offset_right = 656.0
offset_bottom = 128.0
texture_normal = ExtResource("18_72pt2")
texture_pressed = ExtResource("19_a2qqg")
texture_hover = ExtResource("20_knv8d")
texture_disabled = ExtResource("21_07tv2")

[node name="move_left" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_top = 132.0
offset_right = 128.0
offset_bottom = 260.0
texture_normal = ExtResource("22_ui451")
texture_pressed = ExtResource("23_4mirg")
texture_hover = ExtResource("24_fxvus")
texture_disabled = ExtResource("25_fj20d")

[node name="move_right" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 132.0
offset_top = 132.0
offset_right = 260.0
offset_bottom = 260.0
texture_normal = ExtResource("22_ui451")
texture_pressed = ExtResource("23_4mirg")
texture_hover = ExtResource("24_fxvus")
texture_disabled = ExtResource("25_fj20d")
flip_h = true

[node name="jump" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 264.0
offset_top = 132.0
offset_right = 392.0
offset_bottom = 260.0
texture_normal = ExtResource("26_ni7f6")
texture_pressed = ExtResource("27_8ydxo")
texture_hover = ExtResource("28_xujgh")
texture_disabled = ExtResource("29_byesm")

[node name="rest" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 396.0
offset_top = 132.0
offset_right = 524.0
offset_bottom = 260.0
texture_normal = ExtResource("27_wma2k")
texture_pressed = ExtResource("28_6dfo5")
texture_hover = ExtResource("29_yywmx")
texture_disabled = ExtResource("30_r0pc0")

[node name="run" type="TextureButton" parent="ui/vbox/hbox/actions"]
offset_left = 528.0
offset_top = 132.0
offset_right = 656.0
offset_bottom = 260.0
texture_normal = ExtResource("31_clcne")
texture_pressed = ExtResource("32_wcpfn")
texture_hover = ExtResource("33_ftq12")
texture_disabled = ExtResource("34_clk74")

[node name="MarginContainer2" type="MarginContainer" parent="ui/vbox/hbox"]
offset_left = 897.0
offset_right = 1059.0
offset_bottom = 260.0
size_flags_horizontal = 3

[node name="ai_stats" type="VBoxContainer" parent="ui/vbox/hbox"]
unique_name_in_owner = true
offset_left = 1063.0
offset_right = 1271.0
offset_bottom = 260.0
size_flags_horizontal = 8

[node name="name" type="Label" parent="ui/vbox/hbox/ai_stats"]
offset_right = 208.0
offset_bottom = 26.0
text = "Out great loard the second"
horizontal_alignment = 1
vertical_alignment = 1

[node name="health" type="Label" parent="ui/vbox/hbox/ai_stats"]
offset_top = 30.0
offset_right = 208.0
offset_bottom = 56.0
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="health_value" type="ProgressBar" parent="ui/vbox/hbox/ai_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 60.0
offset_right = 208.0
offset_bottom = 85.0
size_flags_vertical = 1
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/ai_stats/health_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stamina" type="Label" parent="ui/vbox/hbox/ai_stats"]
offset_top = 89.0
offset_right = 208.0
offset_bottom = 115.0
text = "Stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stamina_value" type="ProgressBar" parent="ui/vbox/hbox/ai_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 119.0
offset_right = 208.0
offset_bottom = 144.0
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/ai_stats/stamina_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mana" type="Label" parent="ui/vbox/hbox/ai_stats"]
offset_top = 148.0
offset_right = 208.0
offset_bottom = 174.0
text = "Mana"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mana_value" type="ProgressBar" parent="ui/vbox/hbox/ai_stats"]
custom_minimum_size = Vector2i(0, 25)
offset_top = 178.0
offset_right = 208.0
offset_bottom = 203.0
value = 50.0
show_percentage = false

[node name="value" type="Label" parent="ui/vbox/hbox/ai_stats/mana_value"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "1/10
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="ui/vbox/hbox"]
offset_left = 1275.0
offset_right = 1280.0
offset_bottom = 260.0
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
text = "10"
horizontal_alignment = 1

[node name="player_pos" type="Node2D" parent="."]
position = Vector2(270, 208)

[node name="player" parent="player_pos" instance=ExtResource("2_v6cbg")]
unique_name_in_owner = true
scale = Vector2(0.269, 0.269)

[node name="enemy" type="Node2D" parent="."]
position = Vector2(1021, 208)

[node name="ai" parent="enemy" instance=ExtResource("3_fx06h")]
unique_name_in_owner = true
scale = Vector2(-0.269, 0.269)

[node name="Sprite2d" type="Sprite2D" parent="."]
